--- a/src/blocks/file-group/editor.css
+++ b/src/blocks/file-group/editor.css
@@ -6,6 +6,7 @@
   text-decoration: none;
   padding: var(--spacing-sm);
   transition: background 0.2s linear;
+  font-size: 1rem;
 }
 
 [data-color-theme=primary] .file-group__file, .file-group__file[data-color-theme=primary] {
