--- a/src/admin.scss
+++ b/src/admin.scss
@@ -1,5 +1,60 @@
+@use '../vendor/doubleedesign/comet-components-core/src/components/bem-class-selectors' as bem;
+@use '../vendor/doubleedesign/comet-components-core/src/components/PageSection/page-section.scss' as page-section;
+
+:root {
+	--wp-editor-canvas-background: white;
+}
+
 #adminmenu {
 	.wp-submenu {
 		margin-left: 0;
 	}
+}
+
+body :where(.editor-styles-wrapper) {
+	font-family: unset !important;
+	font-size: 1rem !important;
+	line-height: inherit !important;
+	--wp--style--block-gap: 0 !important;
+
+	p {
+		line-height: inherit !important;
+	}
+}
+
+.editor-styles-wrapper {
+	@extend .body;
+
+	@each $colorName in ['primary', 'secondary', 'accent', 'info', 'warning', 'success', 'error', 'light', 'dark', 'white'] {
+		&:has(.page-header[data-background="#{$colorName}"]) {
+			.is-root-container {
+				:first-child[data-background="#{$colorName}"] {
+					padding-block-start: 0;
+				}
+			}
+		}
+	}
+}
+
+.is-root-container {
+	@extend .body;
+	padding-block: 0 !important;
+}
+
+.block-editor-block-list__layout {
+	.wp-block {
+		width: 100%;
+		max-width: 100%;
+	}
+}
+
+// Do not show ACF block content in the sidebar
+.acf-block-component.acf-block-panel {
+	display: none;
+}
+
+// TinyMCE custom modals
+.mce-window.mce-container:not([aria-label="Keyboard Shortcuts"]) {
+	width: 600px;
+	left: calc(50dvw - 300px) !important;
 }
