--- a/src/tinymce/miniblock-plugin.scss
+++ b/src/tinymce/miniblock-plugin.scss
@@ -48,6 +48,15 @@ $swatchSize: 1.75rem;
 	}
 }
 
+.mce-window.mce-container:not([aria-label="Keyboard Shortcuts"]) {
+	width: 600px;
+	left: calc(50dvw - 300px) !important;
+
+	&:has(#button-group-form-container) {
+		width: 700px !important;
+	}
+}
+
 .mce-floatpanel [role="menu"]:has(.mce-color-theme-field__swatch) {
 	display: flex;
 	flex-wrap: wrap;
@@ -107,4 +116,43 @@ $swatchSize: 1.75rem;
 		width: 100% !important;
 		justify-content: unset !important;
 	}
+}
+
+.mce-container-body:has(#button-group-form-container) {
+	background: white;
+	min-height: 300px !important;
+	width: auto !important;
+	display: flex !important;
+	flex-direction: column;
+
+	> .mce-label {
+		position: relative !important;
+		display: block;
+		top: unset !important;
+	}
+}
+
+#button-group-form-container {
+	> .acf-fields {
+		p {
+			text-wrap: wrap;
+		}
+	}
+
+	.acf-field-repeater {
+		padding: 0 !important;
+		margin-top: 0.5rem !important;
+
+		> .acf-label {
+			display: none;
+		}
+
+		.acf-table {
+			border: 1px solid #CCC;
+		}
+	}
+}
+
+.mce-content-body [contenteditable="false"] {
+	cursor: pointer;
 }
