--- a/src/admin.scss
+++ b/src/admin.scss
@@ -22,6 +22,10 @@ body :where(.editor-styles-wrapper) {
 	}
 }
 
+.acf-tooltip {
+	padding: 0.75rem !important;
+}
+
 .editor-styles-wrapper {
 	@extend .body;
 
