--- a/src/admin.scss
+++ b/src/admin.scss
@@ -56,3 +56,9 @@ body :where(.editor-styles-wrapper) {
 .acf-block-component.acf-block-panel {
 	display: none;
 }
+
+.acf-field-wysiwyg.acf-field--call-to-action--description {
+	.mce-edit-area {
+		height: 100px;
+	}
+}
