--- a/src/block-editor-config.scss
+++ b/src/block-editor-config.scss
@@ -1,26 +1,24 @@
+@use 'sass:color';
+
 html :where(.wp-block) {
 	margin-top: 0;
 	margin-bottom: 0;
 	max-width: var(--width-contained);
 }
 
+
 .components-menu-item__button[href*="site-editor.php"] {
 	display: none !important;
 }
 
-.preferences-modal__section-content {
-	.preference-base-option:has(#inspector-toggle-control-3), // starter patterns toggle
-	.preference-base-option:has(#inspector-toggle-control-0) { // list view toggle (behaviour is overridden in JS)
-		display: none;
-	}
-}
-
+/** Preferences modal **/
 .preferences__tabs {
 	#tabs-2-blocks {
 		display: none; // because it crashes the editor, probably because we disable core blocks
 	}
 }
 
+/** Block editor - content region **/
 .editor-visual-editor__post-title-wrapper {
 	padding-inline: var(--spacing-md);
 	margin-top: 0 !important;
@@ -64,7 +62,6 @@ html :where(.wp-block) {
 .acf-block-component .acf-block-fields {
 	font-family: inherit;
 }
-
 
 /**
  * Block editor sidebar
