Fix(WP ACF, WP Blocks): Include table styling in TinyMCE

--- a/src/tinymce/components.scss
+++ b/src/tinymce/components.scss
@@ -4,3 +4,6 @@
 @use '../../vendor/doubleedesign/comet-components-core/src/components/Callout/callout';
 @use '../../vendor/doubleedesign/comet-components-core/src/components/Pullquote/pullquote';
 
+// Other common styles
+@use '../../vendor/doubleedesign/comet-components-core/src/components/Table/table';
+
