--- a/src/block-editor-config.scss
+++ b/src/block-editor-config.scss
@@ -61,6 +61,10 @@ html :where(.wp-block) {
 	}
 }
 
+.edit-post-meta-boxes-area__container {
+	padding-inline: 0;
+}
+
 .components-panel__body {
 	// When the layout panel is closed, hide the custom vertical alignment and container size so they appear like they're in the layout panel
 	+ .comet-custom-layout-controls {
@@ -147,5 +151,27 @@ html :where(.wp-block) {
 				}
 			}
 		}
+	}
+}
+
+// Make ACF selects look like native selects
+.wp-core-ui .acf-block-panel {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+
+	.acf-label {
+		text-transform: uppercase;
+		font-size: 11px;
+		margin: 0;
+	}
+
+	.acf-input select {
+		font-size: 13px;
+		background-size: 13px;
+		background-position: right 10px top 55%;
+		min-height: 40px;
+		border-radius: 3px;
+		padding: 0 30px 0 12px;
 	}
 }
