--- a/src/block-editor-config.css
+++ b/src/block-editor-config.css
@@ -34,7 +34,7 @@ html :where(.wp-block) {
 }
 
 /**
- * Block editor sidebar
+ * =========== Block editor sidebar ====================================================================================
  */
 .components-base-control:has([aria-label="Change vertical alignment"]) {
   padding: 1rem;
@@ -118,6 +118,9 @@ html :where(.wp-block) {
   border-color: var(--wp-components-color-primary, #007cba);
 }
 
+/**
+ * =========== ACF block edit fields (sidebar and overlay) =============================================================
+ */
 .wp-core-ui .acf-block-panel {
   display: flex;
   flex-direction: column;
@@ -135,6 +138,21 @@ html :where(.wp-block) {
   min-height: 40px;
   border-radius: 3px;
   padding: 0 30px 0 12px;
+}
+
+.wp-core-ui .acf-block-panel .select2-selection {
+  min-height: 40px;
+  border-radius: 3px;
+  padding: 0 30px 0 12px;
+}
+.wp-core-ui .acf-block-panel .select2-selection__rendered {
+  height: 100%;
+  display: flex !important;
+  align-items: center;
+}
+.wp-core-ui .acf-block-panel .select2-selection__arrow {
+  height: 100% !important;
+  right: 0.5rem !important;
 }
 
 /*# sourceMappingURL=block-editor-config.css.map */
