--- a/src/block-editor-config.scss
+++ b/src/block-editor-config.scss
@@ -39,7 +39,7 @@ html :where(.wp-block) {
 }
 
 /**
- * Block editor sidebar
+ * =========== Block editor sidebar ====================================================================================
  */
 // Custom vertical alignment used for the banner block (and possibly others added after this)
 .components-base-control:has([aria-label="Change vertical alignment"]) {
@@ -154,7 +154,11 @@ html :where(.wp-block) {
 	}
 }
 
-// Make ACF selects look like native selects
+
+/**
+ * =========== ACF block edit fields (sidebar and overlay) =============================================================
+ */
+// Make ACF selects look like WP core native selects
 .wp-core-ui .acf-block-panel {
 	display: flex;
 	flex-direction: column;
@@ -173,5 +177,25 @@ html :where(.wp-block) {
 		min-height: 40px;
 		border-radius: 3px;
 		padding: 0 30px 0 12px;
+	}
+}
+
+// Make select2 look more like WP core native selects too
+.wp-core-ui .acf-block-panel {
+	.select2-selection {
+		min-height: 40px;
+		border-radius: 3px;
+		padding: 0 30px 0 12px;
+
+		&__rendered {
+			height: 100%;
+			display: flex !important;
+			align-items: center;
+		}
+
+		&__arrow {
+			height: 100% !important;
+			right: 0.5rem !important;
+		}
 	}
 }
