Fix(WP Blocks): Avoid click events on links within block previews in the editor

--- a/src/block-editor-config.css
+++ b/src/block-editor-config.css
@@ -33,6 +33,10 @@ html :where(.wp-block) {
   font-family: inherit;
 }
 
+.block-editor-block-list__block a {
+  pointer-events: none !important;
+}
+
 /**
  * =========== Block editor sidebar ====================================================================================
  */
