--- a/src/block-editor-config.scss
+++ b/src/block-editor-config.scss
@@ -38,6 +38,12 @@ html :where(.wp-block) {
 	font-family: inherit;
 }
 
+.block-editor-block-list__block {
+	a {
+		pointer-events: none !important; // prevent links being clickable in the editor because they then navigate away in the iframe
+	}
+}
+
 /**
  * =========== Block editor sidebar ====================================================================================
  */
